[package]
name = "wappu"
version = "0.2.2"
edition = "2021"
description = "Wappu is a fast and flexible web scraping library for Rust, designed to efficiently navigate and extract data from websites. Perfect for data mining, content aggregation, and web automation tasks."
license = "Apache-2.0"
authors = ["mintsuku <moxxydev@gmail.com>"]


[lib]
path = "src/lib.rs" 

[dependencies]
html5ever = "0.26.0"
markup5ever = "0.11.0"
markup5ever_rcdom = "0.2.0"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }